# tank-game

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  go.mod  project.psd
apps/tank-game/: Cargo.toml  Readme.md
apps/tank-game/assets/: README.md  main.tiled-session  main_assets.tsj  map1.txt  map1_p1_units.txt  map1_p2_units.txt  map2.txt  map2_p1_units.txt  map2_p2_units.txt  map3_p1_units.txt  mission01.tmj
apps/tank-game/assets/maps_legacy/: map0.txt  map1.txt  map1_p1_units.txt  map2_p1_units.txt  map3.txt
apps/tank-game/assets/shaders/: edge_highlight_shader.wgsl
apps/tank-game/src/: README.md  ai.rs  camera.rs  combat.rs  components.rs  config.rs  constants.rs  cursor.rs  defs.rs  economy.rs  faction.rs  fx.rs  game_setup.rs  grid.rs  gridview.rs  harvester.rs  health.rs  main.rs  maps.rs  movement.rs  production.rs  resources.rs  selection.rs  setup.rs  spawn.rs  state.rs  terrain.rs  tests.rs  ui.rs
apps/tank-game/src/actions/: README.md  calculate_astar_path.rs  calculate_bfs.rs  calculate_bfs_simple.rs  calculate_tile_world_position.rs  calculate_world_position.rs  compute_astar_path.rs  get_all_blocking_cells.rs  load_mission.rs  mod.rs  read_main_assets.rs
apps/tank-game/src/building/: building_plugin.rs  building_tile.rs  building_type.rs
apps/tank-game/src/combat/: mod.rs  projectiles.rs  targeting.rs  weapons.rs
apps/tank-game/src/common/: constants.rs  game_map.rs  hoverable.rs  player.rs  tile.rs  tile_queries.rs  unit_id.rs  unit_selection_plugin.rs
apps/tank-game/src/components/: mod.rs
apps/tank-game/src/con_menu/: menu_plugin.rs
apps/tank-game/src/cursor/: cursor_coordinates.rs  cursor_plugin.rs
apps/tank-game/src/debug/: debug_plugin.rs
apps/tank-game/src/defs/: armor.rs  building.rs  mod.rs  producible.rs  unit.rs  weapon.rs
apps/tank-game/src/features/: README.md  mod.rs
apps/tank-game/src/grid/: map.rs  mod.rs  pathfinding.rs  tile.rs
apps/tank-game/src/harvester/: harvester_plugin.rs
apps/tank-game/src/logger/: logger_plugin.rs  tank_log_timer.rs
apps/tank-game/src/menu/: menu_plugin.rs  money_text.rs
apps/tank-game/src/monitoring/: monitoring_plugin.rs
apps/tank-game/src/plugins/: cursor_plugin.rs  logger_plugin.rs  tank_inflation_plugin.rs  tank_movement_plugin.rs  world_coordinates_plugin.rs
apps/tank-game/src/preparation/: file_helpers.rs  load_mission.rs  main_asset_info_resource.rs  mission_info_resource.rs  types.rs
apps/tank-game/src/production/: mod.rs  placement.rs  queue.rs  rules.rs
apps/tank-game/src/resources/: game_map.rs  gold_map.rs  map_trait.rs  me.rs  mission_info_resource.rs  mod.rs
apps/tank-game/src/setup/: setup_plugin.rs  tank_id_counter.rs
apps/tank-game/src/systems/: find_first_gold.rs  mod.rs  setup1.rs  setup2.rs  setup_main_assets.rs  setup_mission.rs  sys_setup_main_assets.rs  sys_setup_mission.rs
apps/tank-game/src/tank/: tank.rs  tank_gun.rs  tank_health.rs  tank_health_manager.rs  tank_id.rs  tank_inflation_plugin.rs  tank_movement_manager.rs  tank_movement_plugin.rs  tank_plugin.rs  tank_queries.rs  tank_selection_plugin.rs  tank_spawn_manager.rs
(+426 files in other folders)
