[workspace]
members = [
    "apps/tank-game",
    "apps/tiled",
    "examples/custom-asset",
    "examples/sandbox",
    "examples/tilemap-generator",
    "examples/example-ui",
    "examples/pathfinder-demo",
    "examples/shooting-demo",
    "examples/construction-demo",
    "examples/harvester-demo",
    "examples/stress-test-demo",
]
