[workspace]
resolver = "2"
members = [
    "apps/tank-game",
    "apps/tiled",
    "examples/custom-asset",
    "examples/sandbox",
    "examples/tilemap-generator",
    "examples/example-ui",
    "examples/pathfinder-demo",
    "examples/shooting-demo",
    "examples/construction-demo",
    "examples/harvester-demo",
    "examples/stress-test-demo",
]

# Enable a small amount of optimization in debug mode so the game is playable.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code.
[profile.dev.package."*"]
opt-level = 3
