[package]
name = "tank-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# remove dynamic_linking before releasing the game
#bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy = "0.13.0"
bevy_prototype_lyon = "0.11.0"
bevy_rapier2d = "0.25.0"
iyes_perf_ui = "0.2.3"
leafwing-input-manager = "0.13.3"
rand = "0.8.5"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.86"
thiserror = "1.0.61"

## Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

## Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3