[package]
name = "tank-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# remove dynamic_linking before releasing the game
#bevy = { version = "0.17.0", features = ["dynamic_linking"] }
bevy = "0.17.0"
# bevy_prototype_lyon removed - lyon compatibility issue, use gizmos instead
bevy_rapier2d = "0.32.0"
# iyes_perf_ui removed - use bevy's built-in diagnostics instead
leafwing-input-manager = "0.16.0"
petgraph = "0.8.3"
rand = "0.9.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

## Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

## Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3