[package]
name = "tank-game"
version = "0.2.0"
edition = "2021"
description = "A Red Alert / Dune style real-time strategy game built with Bevy, using simple shapes."

[dependencies]
# Use the latest stable Bevy. Add the "dynamic_linking" feature locally for faster
# iterative compiles, but remove it before releasing the game.
bevy = "0.18.1"
rand = "0.9.2"
